# swarmit

./: .env  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  swarmit-bootloader-nrf52840-dongle.emProject  swarmit-bootloader-nrf52840dk.emProject  swarmit-gateway-nrf52840dk.emProject  swarmit-netcore.emProject  tox.ini
.github/workflows/: continuous-integration.yml
cmake/: arm-none-eabi.cmake
cmake/targets/nrf5340-app-secure/: nrf5340_bootloader.ld
cmake/targets/nrf5340-net/: nrf5340_netcore.ld
device/bootloader/: CMakeLists.txt
device/bootloader-single-core/Source/: battery.h  main.c  nvmc.c  protocol.h
device/bootloader-single-core/System/: fault_handlers.c  startup.c
device/bootloader/Source/: battery.c  battery.h  cmse_implib.c  cmse_implib.h  ipc.h  lh2_calibration.h  localization.c  localization.h  main.c  protocol.h
device/network_core/: CMakeLists.txt  netcore-app.emProject
device/network_core/Source/: ipc.h  main.c  nvmc.c  nvmc.h  protocol.h
gateway/: gateway-app.emProject
gateway/Source/: main.c  uart.c  uart.h
gateway/System/: startup.c
swarmit/cli/: config_sample.toml  main.py
swarmit/client/: __init__.py  http.py  local.py
swarmit/dashboard/: main.py
swarmit/dashboard/frontend/: index.html
swarmit/dashboard/frontend/src/: App.tsx  BotMap.tsx  CalendarPage.tsx  HomePage.tsx  OnlineDotBotPage.tsx  otaFlash.ts
swarmit/provision/: README.md  cli.py  flash_dotbot.py  nrf_flash.py  swarmit_provision.py
swarmit/server/: __init__.py  main.py
swarmit/service/: __init__.py  main.py
swarmit/testbed/: adapter.py  controller.py  model.py  protocol.py  webserver.py
swarmit/tests/: test_adapter.py  test_cli.py  test_client.py  test_controller.py  test_dashboard_main.py  test_model.py  test_server.py  test_service.py  test_webserver.py  utils.py
testbed/cli/: config_sample.toml  dashboard.py  main.py
testbed/dashboard/: index.html  main.py
testbed/dashboard/frontend/src/: App.tsx
testbed/frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
testbed/frontend/src/: App.tsx  BotMap.tsx  CalendarPage.tsx  HomePage.tsx  Login.tsx  OnlineDotBotPage.tsx  vite-env.d.ts
testbed/swarmit/: adapter.py  controller.py  experiment.py  logger.py  model.py  protocol.py  webserver.py
utils/hooks/: sdist.py
