[build-system]
requires = [
    "hatchling>=1.4.1",
]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "*.py"
]
exclude = [
    "device/",
    "sample/",
]

[tool.hatch.version]
path = "testbed/swarmit/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "swarmit"
dynamic = ["version"]
authors = [
    { name="Alexandre Abadie", email="alexandre.abadie@inria.fr" },
]
dependencies = [
    "click          >= 8.1.7",
    "cryptography   >= 46.0.3",
    "pydotbot-utils >= 0.3.0",
    "rich           >= 14.0.0",
    "structlog      >= 24.4.0",
    "tqdm           >= 4.66.5",
    "marilib-pkg    >= 0.8.0",
]
description = "Run Your Own Robot Swarm Testbed."
readme = "README.md"
license = { text="BSD" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]

[project.optional-dependencies]
dashboard = [
    "fastapi        >= 0.121.2",
    "PyJWT          >= 2.9.0",
    "SQLAlchemy     >= 2.0.25",
    "uvicorn        >= 0.38.0",
]

[project.urls]
"Homepage" = "https://github.com/DotBots/swarmit"
"Bug Tracker" = "https://github.com/DotBots/swarmit/issues"

[project.scripts]
swarmit = "testbed.cli.main:main"

[tool.ruff]
lint.select = ["E", "F"]
line-length = 88
lint.ignore = ["E501", "E722"]
exclude = ["dotbot-libs"]

[tool.isort]
multi_line_output = 3  # Use Vertical Hanging Indent
profile = "black"

[tool.black]
line-length = 79
skip-string-normalization = true
